istio/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: nodejs
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  labels:
    app: backend
    version: v1
spec:
  selector:
    matchLabels:
      app: backend
      version: v1
  replicas: 1
  template:
    metadata:
      name: backend
      labels:
        app: backend
        version: v1
    spec:
      containers:
        - name: backend
          image: nogada/istio-backend
          imagePullPolicy: Always
          ports:
          - name: nodejs
            containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /health
              port: nodejs
            initialDelaySeconds: 3
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: nodejs
            initialDelaySeconds: 1
            periodSeconds: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  labels:
    app: backend
    version: v2
spec:
  selector:
    matchLabels:
      app: backend
      version: v2
  replicas: 1
  template:
    metadata:
      name: backend
      labels:
        app: backend
        version: v2
    spec:
      containers:
        - name: backend
          image: nogada/istio-backend
          imagePullPolicy: Always
          ports:
          - name: nodejs
            containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /health
              port: nodejs
            initialDelaySeconds: 3
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: nodejs
            initialDelaySeconds: 1
            periodSeconds: 3
