istio/k8s/head.yaml
apiVersion: v1
kind: Service
metadata:
  name: head
spec:
  type: ClusterIP
  selector:
    app: head
  ports:
    - name: appport
      port: 8080
      targetPort: appport
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: head
  labels:
    app: head
    version: v1
spec:
  selector:
    matchLabels:
      app: head
      version: v1
  replicas: 1
  template:
    metadata:
      name: head
      labels:
        app: head
        version: v1
    spec:
      containers:
        - name: head
          image: nogada/istio-head
          imagePullPolicy: Always
          ports:
          - name: appport
            containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 300m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /health
              port: appport
            initialDelaySeconds: 3
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: appport
            initialDelaySeconds: 1
            periodSeconds: 3
---
